--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -61,7 +61,7 @@
     <div class="modal-content">
       <div class="modal-header" style="padding-top:0;padding-bottom:0">
           <div class="w-100" align="center">
-        <h5 class="modal-title" id="modalMainTitle">Lookup By Group</h5>
+        <h5 class="modal-title" id="modalMainTitle"></h5>
               </div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="margin-left:inherit">
           <span aria-hidden="true">&times;</span>
