--- a/STSEval/management/templates/management/setup_athletes.html
+++ b/STSEval/management/templates/management/setup_athletes.html
@@ -74,7 +74,7 @@
     }
 
     function NextClick() {
-        window.location = "/management/setup_camera/" + SessionID;
+        window.location = "/management/setup_cameras/" + SessionID;
     }
 
     function AthleteClick(athIn) {
@@ -129,6 +129,7 @@
                 success: function () {
                     $("#divTeamList").load("/management/team_list/" + SessionID); 
                     Changed = false;
+                    SelectedTeam = -1;
                     $('.athlete-list').removeClass("ctxSelected");
                     $("#divAthletes").addClass('ui-disabled');
                     $("#divAthleteList").empty();
@@ -201,7 +202,7 @@
         $("#divTeamList").load("/management/team_list/" +SessionID, function () {
             console.log("comp finish " + SelectedTeam);
             if (SelectedTeam != -1) 
-                CompClick(SelectedTeam);
+                TeamClick(SelectedTeam);
         });
         
     }
@@ -251,6 +252,7 @@
                 },
                 success: function () {
                     FillAthletes();
+                    SelectedAthlete = -1;
                     //$("#btnNext").addClass("ui-disabled");
                 }
             });
