--- a/STSEval/management/templates/management/sponsor_list.html
+++ b/STSEval/management/templates/management/sponsor_list.html
@@ -1,8 +1,9 @@
 {% block content %}
     {% for sponsor in sponsors %}
-        <div id="divSponsor{{sponsor.id}}" onclick="SponsorClick({{sponsor.id}});"class="row no-gutters sponsor-list">
-            <div class="col-6 pl-2" align="left">{{sponsor.name}}</div>
-            <div class="col-6 pr-2" align="right">{{sponsor.url}}</div>
+        <div id="divSponsor{{sponsor.id}}" onclick="SponsorClick({{sponsor.id}});"class="row no-gutters sponsor-list align-items-center">
+            <div class="col-2 pl-2" align="left"><img src="{{sponsor.image.url}}" height="60px" /></div>
+            <div class="col-3" align="center">{{sponsor.name}}</div>
+            <div class="col-7 pr-2" align="right">{{sponsor.url|slice:"0:40"}}</div>
         </div>
     {% endfor %}
 {% endblock %}
