judge not judging fix

--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -1078,6 +1078,7 @@
                 $("#divET" + i).html('');
                 $("#divE" + i + "N").removeClass("judge-strike");
                 AddJudge(i);
+                JudgeDeductions[i] = 0;
                 //}
                 //DedArrayJudges[i] = new Array();
                 //$("#divDotsArea").append("<div id='divJT" + i + "' style='position:absolute;right:5px;top:" + (((i*JudgeYOffset)-(DotSize/2))-2) + "px;font-size:14px;font-weight:bold'></div>");
