--- a/STSEval/app/templates/app/index.html
+++ b/STSEval/app/templates/app/index.html
@@ -18,7 +18,7 @@
         <div align="center">
             <a href="/manage/"><button id="btnAdmin" name="btnAdmin" type="button" class="btn btn-main mt-2" style="width:250px">Administrator</button></a><br/>
              <a href="/judge_select/"><button id="btnJudge" name="btnJudge" type="button" class="btn btn-main mt-2" style="width:250px">Judge</button></a><br/>
-            <button id="btnSpectator" name="btnSpectator" type="button"class="btn btn-main ui-disabled mt-2" style="width:250px">Spectator</button><br/>
+             <a href="/spectate/"><button id="btnSpectator" name="btnSpectator" type="button"class="btn btn-main mt-2" style="width:250px">Spectator</button></a><br/>
              <div align="center">STS Results &copy; {{ year }}</div>
         </div>
     </div>
