--- a/STSEval/management/templates/management/session_form.html
+++ b/STSEval/management/templates/management/session_form.html
@@ -2,15 +2,26 @@
     {% csrf_token %}
     <div id="divManageSession" align="center">
         <div class="row">
-            <div class="col-8">
+            <div class="col-6">
                 SESSION NAME<br/>
                 {{ form.name }}<br/>
                 {{form.name.errors}}
             </div>
-            <div class="col-4">
+            <div class="col-3">
                 SESSION TIME<br/>
                 {{ form.time }}<br/>
                 {{form.time.errors}}
+            </div>
+            <div class="col-3">
+                <div class="row no-gutters">
+                    <div class="col-12">SPECTATOR FEE</div>
+                </div>
+                <div class="d-flex">
+                <div class="align-self-center">$</div><div>{{ form.spectator_fee }}</div></div>
+                {{form.spectator_fee.errors}}
+                {% for err in form.non_field_errors %}
+                    <div class="errorlist">{{ err }}</div>
+                {% endfor %}
             </div>
         </div>
         {{form.competition}}
