email sending bitches

--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -26,6 +26,10 @@ body {
     border-radius:1rem;
 }
 
+.btn-wide{
+    width:128px;
+}
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
