--- a/STSEval/management/templates/management/setup_cameras.html
+++ b/STSEval/management/templates/management/setup_cameras.html
@@ -89,7 +89,7 @@
         $('.camera-list').removeClass("ctxSelected");
         $("#divCamera" + camIn).addClass("ctxSelected");
         SelectedCamera = camIn;
-        EnableDisableButtons("Camer", true)
+        EnableDisableButtons("Camera", true)
         //$("#btnNext").removeClass("ui-disabled");
 
     }
