--- a/STSEval/management/templates/management/setup_sponsors.html
+++ b/STSEval/management/templates/management/setup_sponsors.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <div align="center" style="margin:10px;padding:0">
+    {{session_name}}<br/>
     <div>
         <div id="divSponsors" style="vertical-align: top;padding:3px;display:inline-block;margin-right:30px;">
 		    <div id="divSponsorHeader" style="padding-bottom:5px;font-size:22px;font-weight:bold;text-align:center">Sponsors</div>
