--- a/STSEval/management/templates/management/team_form.html
+++ b/STSEval/management/templates/management/team_form.html
@@ -2,7 +2,7 @@
     {% csrf_token %}
     <div id="divManageTeam" align="center">
         <div class="row">
-            <div class="col-10">
+            <div class="col-4">
                 NAME<br/>
                 {{ form.name }}<br/>
                 {{form.name.errors}}
@@ -10,7 +10,17 @@
             <div class="col-2">
                 ABBREV.<br/>
                 {{ form.abbreviation }}<br/>
-                {{form.time.errors}}
+                {{form.abbreviation.errors}}
+            </div>
+            <div class="col-4">
+                COACH EMAIL<br/>
+                {{ form.head_coach_email }}<br/>
+                {{form.head_coach_email.errors}}
+            </div>
+            <div class="col-2">
+                PASSWORD<br/>
+                {{ form.coach_password }}<br/>
+                {{form.coach_password.errors}}
             </div>
         </div>
         {{form.session}}
